align resteemed icon with image, resolves #203

--- a/app/components/cards/PostSummary.scss
+++ b/app/components/cards/PostSummary.scss
@@ -120,6 +120,12 @@ ul.PostsList__summaries {
   color: $dark-gray;
 }
 
+@media screen and (min-width: 39.9375em) {
+  .PostSummary.with-image .PostSummary__reblogged_by .Icon.reblog {
+    margin-left: -22px;
+  }
+}
+
 .PostSummary__reblogged_by {
   .Icon path {
     fill: #cacaca;
